Fix sizing on mobile

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -61,7 +61,7 @@ ol.bibliography {
     @extend .justify-content-between;
     @extend .align-items-start;
     &>div {
-      width: 85%;
+      width: 80%;
     }
   }
 }
